# un1c0rn-governors

./: .gitignore  LICENSE  README.md
design-governor/: LICENSE  MANIFEST.in  README.md  TESTING.md  pyproject.toml  requirements.txt
design-governor/design_governor/: __init__.py
design-governor/design_governor/templates/: AGENTS_TEMPLATE.md  DESIGN_GOVERNOR_AGENT_WORKFLOWS.md  HOW_IT_WORKS.md  design_change_request.template.json  design_governor_project.template.json  design_governor_registry.template.json  github_workflow.design-governor.yml  pre-commit-config.template.yaml
design-governor/tests/: test_bootstrap.py  test_ci_workflow.py  test_directive_02_policy_rules.py  test_directive_03_visual_proofs.py  test_directive_05_surface_adapters.py  test_explanation_modes.py  test_release_audit.py  test_release_hardening.py  test_support.py
