[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "design-governor"
version = "1.1.0"
description = "Design Governor by UN1C0RN for locking approved website contracts"
readme = "README.md"
authors = [{ name = "UN1C0RN" }]
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cssutils>=2.7.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
release = [
    "build>=1.2.2",
]

[project.scripts]
design-governor = "design_governor:main"

[tool.setuptools.package-data]
design_governor = ["templates/*"]
